WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49563
[chromium] Fix negative letter spacing in complex text on linux
https://bugs.webkit.org/show_bug.cgi?id=49563
Summary
[chromium] Fix negative letter spacing in complex text on linux
James Simonsen
Reported
2010-11-15 14:42:41 PST
[chromium] Fix negative letter spacing in complex text on linux
Attachments
Patch
(82.57 KB, patch)
2010-11-16 15:36 PST
,
James Simonsen
no flags
Details
Formatted Diff
Diff
Patch
(82.41 KB, patch)
2010-11-16 16:06 PST
,
James Simonsen
tony
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Simonsen
Comment 1
2010-11-16 15:36:00 PST
Created
attachment 74048
[details]
Patch
James Simonsen
Comment 2
2010-11-16 15:39:00 PST
Enabling letter spacing on linux revealed that we had made some false assumptions that spacing would always be non-negative. That's not the case and this patch will correctly handle negative spacing. Since there's a new layout test. I'll have somewhere here land it and then we'll rebaseline the necessary platforms once the bots fail. Let me know if anyone knows an easier way to add layout tests.
James Simonsen
Comment 3
2010-11-16 15:39:57 PST
(In reply to
comment #2
)
> Enabling letter spacing on linux revealed that we had made some false assumptions that spacing would always be non-negative. That's not the case and this patch will correctly handle negative spacing. > > Since there's a new layout test. I'll have somewhere here land it and then we'll rebaseline the necessary platforms once the bots fail. Let me know if anyone knows an easier way to add layout tests.
Oops, that should be "...someone here land it..."
Tony Chang
Comment 4
2010-11-16 15:44:10 PST
Comment on
attachment 74048
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=74048&action=review
One option for chromium win/mac is to mark the test as expected to fail, which gives you a chance to rebaseline it without turning the tree red. gtk, qt, and win, you'll just have to break the tree and grab the results from the waterfall.
> WebCore/platform/graphics/chromium/FontLinux.cpp:54 > +using namespace std;
Can we do without this?
> WebCore/platform/graphics/chromium/FontLinux.cpp:561 > + m_pixelWidth = max(position, 0.0);
std::max seems safer to avoid ambiguity.
James Simonsen
Comment 5
2010-11-16 16:06:22 PST
Created
attachment 74052
[details]
Patch
Tony Chang
Comment 6
2010-11-16 16:49:08 PST
I can land this and the updated baselines for you tomorrow.
James Simonsen
Comment 7
2010-11-16 17:05:15 PST
(In reply to
comment #6
)
> I can land this and the updated baselines for you tomorrow.
Thanks! That would really help a lot.
Tony Chang
Comment 8
2010-11-17 13:29:47 PST
Committed
r72239
: <
http://trac.webkit.org/changeset/72239
>
James Simonsen
Comment 9
2010-11-17 14:14:34 PST
(In reply to
comment #8
)
> Committed
r72239
: <
http://trac.webkit.org/changeset/72239
>
Thanks so much!
Tony Chang
Comment 10
2010-11-17 16:16:48 PST
Win results:
http://trac.webkit.org/changeset/72244
Skip on qt/gtk:
http://trac.webkit.org/changeset/72254
Chromium-win results:
http://trac.webkit.org/changeset/72255
David Levin
Comment 11
2010-11-17 22:38:01 PST
Please be kind to gardeners :) Add new tests to test_expectations.txt in your patch until you get the chance to land rebaselines.
Tony Chang
Comment 12
2010-11-18 09:29:17 PST
(In reply to
comment #11
)
> Please be kind to gardeners :) > > Add new tests to test_expectations.txt in your patch until you get the chance to land rebaselines.
I thought we did? I didn't see any of the chromium bots go red.
http://trac.webkit.org/changeset/72239/trunk/LayoutTests/platform/chromium/test_expectations.txt
David Levin
Comment 13
2010-11-18 11:12:29 PST
(In reply to
comment #12
)
> (In reply to
comment #11
) > > Please be kind to gardeners :) > > > > Add new tests to test_expectations.txt in your patch until you get the chance to land rebaselines. > > I thought we did? I didn't see any of the chromium bots go red. > >
http://trac.webkit.org/changeset/72239/trunk/LayoutTests/platform/chromium/test_expectations.txt
webkit.org bot for chromium don't run layout tests. You need to watch the canary. Fixed here:
http://trac.webkit.org/changeset/72277
Why is chromium mac different from the mac baseline checked in.... I don't know.
Tony Chang
Comment 14
2010-11-18 11:49:34 PST
(In reply to
comment #13
)
> webkit.org bot for chromium don't run layout tests. You need to watch the canary. > > Fixed here:
http://trac.webkit.org/changeset/72277
> > Why is chromium mac different from the mac baseline checked in.... I don't know.
Ah, you're right. Sorry about that, I missed it when I was watching the canary bots.
David Levin
Comment 15
2010-11-18 11:54:14 PST
(In reply to
comment #14
)
> (In reply to
comment #13
) > > webkit.org bot for chromium don't run layout tests. You need to watch the canary. > > > > Fixed here:
http://trac.webkit.org/changeset/72277
> > > > Why is chromium mac different from the mac baseline checked in.... I don't know. > > Ah, you're right. Sorry about that, I missed it when I was watching the canary bots.
No worries. I was just attempting a friendly reminder.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug