2010-11-17  James Simonsen  <simonjam@chromium.org>

Reviewed by Tony Chang.

        [chromium] Fix negative letter spacing in complex text on linux
        https://bugs.webkit.org/show_bug.cgi?id=49563

        * fast/text/atsui-negative-spacing-features.html: Added.
        * platform/chromium-linux/fast/text/atsui-negative-spacing-features-expected.checksum: Added.
        * platform/chromium-linux/fast/text/atsui-negative-spacing-features-expected.png: Added.
        * platform/chromium-linux/fast/text/atsui-negative-spacing-features-expected.txt: Added.
        * platform/mac/fast/text/atsui-negative-spacing-features-expected.checksum: Added.
        * platform/mac/fast/text/atsui-negative-spacing-features-expected.png: Added.
        * platform/mac/fast/text/atsui-negative-spacing-features-expected.txt: Added.
2010-11-17  James Simonsen  <simonjam@chromium.org>

        Reviewed by Tony Chang.

        [chromium] Fix negative letter spacing in complex text on linux
        https://bugs.webkit.org/show_bug.cgi?id=49563

        Test: fast/text/atsui-negative-spacing-features.html

        * platform/graphics/chromium/FontLinux.cpp: Make spacing signed.

Canonical link: https://commits.webkit.org/62701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72239 268f45cc-cd09-0410-ab3c-d52691b4dbfc